// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse course 1`] = `
Array [
  Array [
    Object {
      "classId": 2500,
      "subject": "CS",
      "type": "COURSE",
    },
    Object {
      "classId": 2500,
      "subject": "CS",
      "type": "COURSE",
    },
  ],
]
`;

exports[`parse or courses 1`] = `
Array [
  Array [
    Object {
      "courses": Array [
        Object {
          "classId": 2500,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "classId": 2501,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "classId": 2501,
          "subject": "CS",
          "type": "COURSE",
        },
      ],
      "type": "OR",
    },
  ],
]
`;
